osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_require/test_validates_for_invalid_rule_ast_node.txt
error: a literal string or format string is required here
--> main.sml:3:13
     |
   3 | Require(rule=Foo)
     |              ^ you can only use literal strings, for example:
                    | `Require(rule="hello.sml")` or `Require(rule=f"actions/{ActionName}.sml")`
